<resources>
    <string name="app_name">Timesteal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_timer">Timer</string>
    <string name="title_stats">Stats</string>
    <string name="title_projects">Projects</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
</resources>