<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_projects">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.standalone.timesteal.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.standalone.timesteal.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.standalone.timesteal.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.standalone.timesteal.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.standalone.timesteal.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>